Add SuperPost class and refactor PostWSpecs to use Post type; update PostRepository and ExploreSearchResponse for enhanced post handling